--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="output" class="container">
 
     </div>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <!-- <script src="callback.js"></script> -->
+    <script src="promise.js"></script>
 </body>
 </html>
